objects/Location.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (Host)</relationshipLabel>
        <relationshipName>Hosts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer who owns Inventory</inlineHelpText>
        <label>Inventory Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Inventory</fullName>
                </value>
                <value>
                    <fullName>Borrego Inventory</fullName>
                </value>
                <value>
                    <fullName>Consignment</fullName>
                    <isActive>false</isActive>
                    <label>Consignment</label>
                </value>
                <value>
                    <fullName>Tool</fullName>
                    <isActive>false</isActive>
                    <label>Tool</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource_Email__c</fullName>
        <label>Service Resource Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Resource_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>Name</columns>
        <columns>TimeZone</columns>
        <columns>ParentLocation</columns>
        <columns>LocationType</columns>
        <columns>Service_Resource__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>Trucks</fullName>
        <columns>Name</columns>
        <columns>LocationType</columns>
        <columns>Service_Resource__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Truck</value>
        </filters>
        <label>Trucks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Warehouse_Locations</fullName>
        <columns>Name</columns>
        <columns>ParentLocation</columns>
        <columns>Inventory_Type__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filters>
        <label>Warehouse Locations</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Trucks</fullName>
        <active>true</active>
        <description>Borrego Trucks identified as Locations</description>
        <label>Trucks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Warehouse</fullName>
        <active>true</active>
        <description>Borrego warehouse location with sub-locations representing Borrego or Customer Inventory</description>
        <label>Warehouse</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>